tiles: allow nio access for madavise